opam-version: "2.0"
name: "nocoiner"
version: "1.0.1"
synopsis: "A Commitment Scheme library for Coin Flipping/Tossing algorithms and sort"
description: """
This project implements Commitment Schemes using the
Encrypt-then-MAC approach of authenticated encryption. Because this kind of
encryption algorithm provides both Message Confidentiality and Integrity, it fits
perfectly the Hiding and Binding properties of Commitment Schemes.
Confidentiality protects the message against passive attacks while integrity
protects it from active attacks.
"""
maintainer: "Marco Aurélio da Silva <marcoonroad@gmail.com>"
authors: ["Marco Aurélio da Silva <marcoonroad@gmail.com>"]
homepage: "https://github.com/marcoonroad/nocoiner"
bug-reports: "https://github.com/marcoonroad/nocoiner/issues"
dev-repo: "git+https://github.com/marcoonroad/nocoiner.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "build" "@test/spec/runtest" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.9"}
  "cmdliner" {>= "1.0.0"}
  "alcotest" {>= "0.8.0" & with-test}
  "nocrypto" {>= "0.5.0"}
  "scrypt-kdf" {>= "1.0.0"}
  "digestif" {>= "0.7.0"}
  "core" {>= "v0.9.0"}
  "eqaf" {>= "0.4"}
  "bisect_ppx" {>= "1.4.0"}
]
