opam-version: "2.0"
name: "nocoiner"
version: "2.0.0"
synopsis: "A Commitment Scheme library for Coin Flipping/Tossing algorithms and sort"
description: """
This project implements Commitment Schemes using the
Encrypt-then-MAC approach of authenticated encryption. Because this kind of
encryption algorithm provides both Message Confidentiality and Integrity, it fits
perfectly the Hiding and Binding properties of Commitment Schemes.
Confidentiality protects the message against passive attacks while integrity
protects it from active attacks.
"""
maintainer: "Marco Aurélio da Silva <marcoonroad@gmail.com>"
authors: ["Marco Aurélio da Silva <marcoonroad@gmail.com>"]
homepage: "https://github.com/marcoonroad/nocoiner"
bug-reports: "https://github.com/marcoonroad/nocoiner/issues"
dev-repo: "git+https://github.com/marcoonroad/nocoiner.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "build" "@test/spec/runtest" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.08.0"}
  "alcotest" {>= "0.8.4"}
  "base" {>= "v0.9.0"}
  "base64" {>= "3.2.0"}
  "bisect_ppx" {>= "2.0.0"}
  "cmdliner" {>= "1.0.0"}
  "dune" {>= "1.6.2"}
  "eqaf" {>= "0.5"}
  "mirage-crypto" {>= "0.6.1"}
  "mirage-crypto-rng" {>= "0.6.1"}
  "scrypt-kdf" {>= "1.0.0"}
]
